chore: added code coverage report plugin in pom file and updated the dependencies version in properties

--- a/pom.xml
+++ b/pom.xml
@@ -7,23 +7,54 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Tennis Game Kata</name>
 	<description>Tennis Game using TDD approach with Java implementation</description>
+
+	<properties>
+		<junit.version>4.12</junit.version>
+		<junit.params.version>1.1.0</junit.params.version>
+		<logger.version>1.2.17</logger.version>
+		<jacoco.version>0.8.5</jacoco.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>pl.pragmatists</groupId>
 			<artifactId>JUnitParams</artifactId>
-			<version>1.1.0</version>
+			<version>${junit.params.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<version>${logger.version}</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<id>prepare-tests</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>test-report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
