--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Tennis Game Kata</name>
 	<description>Tennis Game using TDD approach with Java implementation</description>
-
 	<properties>
 		<junit.version>4.12</junit.version>
 		<junit.params.version>1.1.0</junit.params.version>
 		<logger.version>1.2.17</logger.version>
 		<jacoco.version>0.8.5</jacoco.version>
+		<pitest.version>1.5.2</pitest.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -54,6 +54,28 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.pitest</groupId>
+				<artifactId>pitest-maven</artifactId>
+				<version>${pitest.version}</version>
+				<executions>
+					<execution>
+						<id>pit-report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>mutationCoverage</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<targetClasses>
+						<param>com.bnpp.kata.*</param>
+					</targetClasses>
+					<targetTests>
+						<param>com.bnpp.kata.*</param>
+					</targetTests>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
