chore: added java execution plugin in pom file

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<logger.version>1.2.17</logger.version>
 		<jacoco.version>0.8.5</jacoco.version>
 		<pitest.version>1.5.2</pitest.version>
+		<exec.maven.version>1.2.1</exec.maven.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -75,6 +76,21 @@
 					<targetTests>
 						<param>com.bnpp.kata.*</param>
 					</targetTests>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>${exec.maven.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>com.bnpp.kata.TennisGameRunner</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
