--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
 			<version>${junit.params.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>${logger.version}</version>
-		</dependency>
+       <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.5</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
